--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gidrotsikly</title>
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-  
+
+<body class='page'>
+  <div class='wrapper'>
+    <header class="header">
+      <div class='header__top'>
+        <div class="container">
+          <div class="header__top-inner">
+            <nav class="header__nav">
+              <a class='header__nav-link' href="#">Магазины</a>
+              <a class='header__nav-link' href="#">Акции</a>
+              <a class='header__nav-link' href="#">Доставка и оплата</a>
+            </nav>
+            <a class='haeder__logo logo' href="./index.html">
+              <img src="./images/logo.svg" alt="logo">
+            </a>
+            <a class='header__nav-link header__nav-link--location' href="#">Москва, ул. Науки 25</a>
+            <nav class='header__nav header__nav-user'>
+              <a class='header__nav-link header__nav-link-user' href="#">
+                <img src="./images/heart.svg" alt="сердце">
+              </a>
+              <a class='header__nav-link header__nav-link-user' href="#">
+                <img src="./images/person.svg" alt="иконка силуэта человека">
+              </a>
+              <a class='header__nav-link header__nav-link-user' href="#">
+                <img src="./images/bascet.svg" alt="">
+                <span>1</span>
+              </a>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <div class="header__bottom">
+        <div class="container">
+          <div class="header__bottom-inner">
+           <nav class='header__nav'>
+              <a class='header__nav-link' href="#">Квадроциклы</a>
+              <a class='header__nav-link' href="#">Катера</a>
+              <a class='header__nav-link' href="#">Гидроциклы</a>
+              <a class='header__nav-link' href="#">Лодки</a>
+              <a class='header__nav-link' href="#">Вездеходы</a>
+              <a class='header__nav-link' href="#">Снегоходы</a>
+              <a class='header__nav-link' href="#">Двигатели</a>
+              <a class='header__nav-link' href="#">Запчасти</a>
+           </nav >
+          </div>
+        </div>
+      </div>
+    </header>
+  </div class='wrapper'>
 </body>
+
 </html>
