--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="header__bottom">
         <div class="container">
           <div class="header__bottom-inner">
-           <nav class='header__nav'>
+            <nav class='header__nav'>
               <a class='header__nav-link' href="#">Квадроциклы</a>
               <a class='header__nav-link' href="#">Катера</a>
               <a class='header__nav-link' href="#">Гидроциклы</a>
@@ -51,12 +51,12 @@
               <a class='header__nav-link' href="#">Снегоходы</a>
               <a class='header__nav-link' href="#">Двигатели</a>
               <a class='header__nav-link' href="#">Запчасти</a>
-           </nav >
+            </nav>
           </div>
         </div>
       </div>
     </header>
-  </div class='wrapper'>
+  </div>
 </body>
 
 </html>
