--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                   <p>акция</p>
                 </div>
                 <div class="cardPromtion__newPrice">190 000</div>
-              </div >
-              <div class="cardPromtion__newOldPrice">225 000</div>
-              <img src="./images/motorHeaderActionCard.jpg" alt="лодочный мотор">
+              </div>
+              <div class="cardPromtion__oldPrice">225 000</div>
+              <div class='cardPromtion__imgBox'><img src="./images/motorHeaderActionCard.jpg" alt="лодочный мотор">
+              </div>
               <p class='cardPromtion__discription'>Лодочный мотор
                 Suzuki DF9.9BRS</p>
               <div class='cardPromtion__period'>
