--- a/index.html
+++ b/index.html
@@ -106,6 +106,30 @@
           </div>
         </div>
       </section>
+      <section class="search">
+        <div class='container'>
+          <form class='search__form'>
+            <div class='search__form-top'>
+              <label class="checkbox-btn">
+                <input type="radio" name='checkbox' value="номер">
+                <span>Поиск по номеру</span>
+              </label>
+              <label class="checkbox-btn">
+                <input type="radio" name='checkbox' value="марку" checked>
+                <span>Поиск по марке</span>
+              </label>
+              <label class="checkbox-btn">
+                <input type="radio" name='checkbox' value="название товара">
+                <span>Поиск по названию товара</span>
+              </label>
+            </div>
+            <div class='search__form-buttom'>
+              <input class='search__input' type="text" placeholder="введите марку">
+              <button class='search__button-submit' type='submit'>искать</button>
+            </div>
+          </form>
+        </div >
+      </section>
     </main>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
