--- a/index.html
+++ b/index.html
@@ -130,6 +130,21 @@
           </form>
         </div >
       </section>
+      <section class="cardNav">
+        <div class="container">
+          <ul class="cardNav__list">
+            <li class="cardNav__list-item">
+              <a class='cardNav__list-link' href="#">
+                <p class='cardNav__list-link-discroption'>Квадроциклы</p>
+                <div class="cardNav__list-link-imgBox">
+                  <img src="./images/technikaCard/1.jpg" alt="">
+                </div>
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      </section>
     </main>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
