--- a/index.html
+++ b/index.html
@@ -135,9 +135,67 @@
           <ul class="cardNav__list">
             <li class="cardNav__list-item">
               <a class='cardNav__list-link' href="#">
-                <p class='cardNav__list-link-discroption'>Квадроциклы</p>
+                <div class='cardNav__list-link-content'>
+                  <p class='cardNav__list-link-discroption'>Квадроциклы</p>
+                  <p class="cardNav__list-link-further">Подробнее</p>
+                </div >
                 <div class="cardNav__list-link-imgBox">
                   <img src="./images/technikaCard/1.jpg" alt="">
+                </div>
+              </a>
+            </li>
+            <li class="cardNav__list-item">
+              <a class='cardNav__list-link' href="#">
+                <div class='cardNav__list-link-content'>
+                  <p class='cardNav__list-link-discroption'>Гидроциклы</p>
+                  <p class="cardNav__list-link-further">Подробнее</p>
+                </div >
+                <div class="cardNav__list-link-imgBox">
+                  <img src="./images/technikaCard/2.jpg" alt="">
+                </div>
+              </a>
+            </li>
+            <li class="cardNav__list-item">
+              <a class='cardNav__list-link' href="#">
+                <div class='cardNav__list-link-content'>
+                  <p class='cardNav__list-link-discroption'>Катера</p>
+                  <p class="cardNav__list-link-further">Подробнее</p>
+                </div >
+                <div class="cardNav__list-link-imgBox">
+                  <img src="./images/technikaCard/3.jpg" alt="">
+                </div>
+              </a>
+            </li>
+            <li class="cardNav__list-item">
+              <a class='cardNav__list-link' href="#">
+                <div class='cardNav__list-link-content'>
+                  <p class='cardNav__list-link-discroption'>Снегоходы</p>
+                  <p class="cardNav__list-link-further">Подробнее</p>
+                </div >
+                <div class="cardNav__list-link-imgBox">
+                  <img src="./images/technikaCard/4.jpg" alt="">
+                </div>
+              </a>
+            </li>
+            <li class="cardNav__list-item">
+              <a class='cardNav__list-link' href="#">
+                <div class='cardNav__list-link-content'>
+                  <p class='cardNav__list-link-discroption'>Вездеходы</p>
+                  <p class="cardNav__list-link-further">Подробнее</p>
+                </div >
+                <div class="cardNav__list-link-imgBox">
+                  <img src="./images/technikaCard/5.jpg" alt="">
+                </div>
+              </a>
+            </li>
+            <li class="cardNav__list-item">
+              <a class='cardNav__list-link' href="#">
+                <div class='cardNav__list-link-content'>
+                  <p class='cardNav__list-link-discroption'>Двигатели</p>
+                  <p class="cardNav__list-link-further">Подробнее</p>
+                </div >
+                <div class="cardNav__list-link-imgBox">
+                  <img src="./images/technikaCard/6.jpg" alt="">
                 </div>
               </a>
             </li>
