--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                 </li>
               </ul>
               <div class='cardList-wrapper'>
-                <ul class='popular__cardList'>
-                  <li class='mix popular__card card popular__card--spareParts' data-order="1">
+                <ul class='popular__cardList cardList '>
+                  <li class='mix card popular__card--spareParts' data-order="1">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner'>
                         <p>sale</p>
@@ -309,7 +309,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class='mix popular__card card popular__card--motors' data-order="2">
+                  <li class='mix card popular__card--motors' data-order="2">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner  card-saleBanner--activ'>
                         <p>sale</p>
@@ -344,7 +344,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class='mix popular__card card popular__card--tyres' data-order="3">
+                  <li class='mix card popular__card--tyres' data-order="3">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner'>
                         <p>sale</p>
@@ -378,7 +378,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class='mix popular__card card popular__card--electronics' data-order="4">
+                  <li class='mix card popular__card--electronics' data-order="4">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner  card-saleBanner--activ'>
                         <p>sale</p>
@@ -414,7 +414,7 @@
   
                     </div>
                   </li>
-                  <li class='mix popular__card card popular__card--spareParts' data-order="5">
+                  <li class='mix card popular__card--spareParts' data-order="5">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner'>
                         <p>sale</p>
@@ -449,7 +449,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class='mix popular__card card popular__card--motors' data-order="6">
+                  <li class='mix card popular__card--motors' data-order="6">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner'>
                         <p>sale</p>
@@ -484,7 +484,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class='mix popular__card card popular__card--motors' data-order="7">
+                  <li class='mix card popular__card--motors' data-order="7">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner'>
                         <p>sale</p>
@@ -580,7 +580,7 @@
                 </li>
               </ul>
               <div class='cardList-wrapper'>
-                <ul class='additionalItem__cardList'>
+                <ul class='additionalItem__cardList cardList '>
                   <li class='mix card additionalItem__card--spareParts' data-order="1">
                     <div class='card-link' href="#">
                       <div class='card-saleBanner'>
