--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="cardPromtion__actionBanner">
                   <p>акция</p>
                 </div>
-                <div class="cardPromtion__newPrice">190 000</div>
+                <div class="cardPromtion__newPrice">190 000 ₽</div>
               </div>
               <div class="cardPromtion__oldPrice">225 000</div>
               <div class='cardPromtion__imgBox'><img src="./images/motorHeaderActionCard.jpg" alt="лодочный мотор">
@@ -275,7 +275,7 @@
               <div class='cardList-wrapper'>
                 <ul class='popular__cardList cardList '>
                   <li class='mix card popular__card--spareParts' data-order="1">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -311,7 +311,7 @@
                     </div>
                   </li>
                   <li class='mix card popular__card--motors' data-order="2">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner  card-saleBanner--active'>
                         <p>sale</p>
                       </div>
@@ -347,7 +347,7 @@
                     </div>
                   </li>
                   <li class='mix card popular__card--tyres' data-order="3">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -382,7 +382,7 @@
                     </div>
                   </li>
                   <li class='mix card popular__card--electronics' data-order="4">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner  card-saleBanner--active'>
                         <p>sale</p>
                       </div>
@@ -419,7 +419,7 @@
                     </div>
                   </li>
                   <li class='mix card popular__card--spareParts' data-order="5">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -455,7 +455,7 @@
                     </div>
                   </li>
                   <li class='mix card popular__card--motors' data-order="6">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -491,11 +491,11 @@
                     </div>
                   </li>
                   <li class='mix card popular__card--motors' data-order="7">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
-                      <button class="card-like" href="#">
+                      <button class="card-like">
                         <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M12 8.22892C12.234 7.10892 13.547 1.99992 17.382 1.99992C19.602 1.99992 22 3.55092 22 7.00292C22 10.9099 18.373 15.4729 12 19.6319C5.627 15.4729 2 10.9099 2 7.00292C2 3.51892 4.369 1.99792 6.577 1.99792C10.5 1.99792 11.722 7.12392 12 8.22892ZM0 7.00292C0 11.0709 3.06 16.4839 12 21.9999C20.94 16.4839 24 11.0709 24 7.00292C24 -0.959077 14.352 -2.02508 12 3.26592C9.662 -1.99608 0 -1.00408 0 7.00292Z"
@@ -595,7 +595,7 @@
               <div class='cardList-wrapper'>
                 <ul class='additionalItem__cardList cardList '>
                   <li class='mix card additionalItem__card--spareParts' data-order="1">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner card-saleBanner--active'>
                         <p>sale</p>
                       </div>
@@ -630,7 +630,7 @@
                     </div>
                   </li>
                   <li class='mix card additionalItem__card--motors' data-order="2">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -666,7 +666,7 @@
                     </div>
                   </li>
                   <li class='mix card additionalItem__card--tyres' data-order="3">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner card-saleBanner--active'>
                         <p>sale</p>
                       </div>
@@ -701,7 +701,7 @@
                     </div>
                   </li>
                   <li class='mix card additionalItem__card--electronics' data-order="4">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -738,7 +738,7 @@
                     </div>
                   </li>
                   <li class='mix card additionalItem__card--spareParts' data-order="5">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -774,7 +774,7 @@
                     </div>
                   </li>
                   <li class='mix card additionalItem__card--motors' data-order="6">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
@@ -810,11 +810,11 @@
                     </div>
                   </li>
                   <li class='mix card additionalItem__card--motors' data-order="7">
-                    <div class='card-link' href="#">
+                    <div class='card-link'>
                       <div class='card-saleBanner'>
                         <p>sale</p>
                       </div>
-                      <button class="card-like" href="#">
+                      <button class="card-like">
                         <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M12 8.22892C12.234 7.10892 13.547 1.99992 17.382 1.99992C19.602 1.99992 22 3.55092 22 7.00292C22 10.9099 18.373 15.4729 12 19.6319C5.627 15.4729 2 10.9099 2 7.00292C2 3.51892 4.369 1.99792 6.577 1.99792C10.5 1.99792 11.722 7.12392 12 8.22892ZM0 7.00292C0 11.0709 3.06 16.4839 12 21.9999C20.94 16.4839 24 11.0709 24 7.00292C24 -0.959077 14.352 -2.02508 12 3.26592C9.662 -1.99608 0 -1.00408 0 7.00292Z"
