--- a/index.html
+++ b/index.html
@@ -12,80 +12,178 @@
 
 <body class='page'>
   <div class='wrapper'>
+    <div class="overlay"></div>
     <header class="header">
+      <a class="burger" href="#">
+        <span></span>
+      </a>
+      <ul class="burger-nav">
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Войти
+            <span>
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M17.3527 15.0805C14.4867 14.4188 11.8191 13.8388 13.1108 11.3987C17.0443 3.9718 14.1534 0 10.0007 0C5.7656 0 2.94717 4.1243 6.89064 11.3987C8.22151 13.853 5.45309 14.433 2.64883 15.0805C0.0879081 15.6722 -0.00792858 16.9439 0.000405028 19.1673L0.00373847 20.0007H19.9961L19.9994 19.1931C20.0094 16.9531 19.9227 15.6747 17.3527 15.0805V15.0805Z"
+                  fill="#2F3035" />
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Регистрация
+            <span>
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M17.3527 15.0805C14.4867 14.4188 11.8191 13.8388 13.1108 11.3987C17.0443 3.9718 14.1534 0 10.0007 0C5.7656 0 2.94717 4.1243 6.89064 11.3987C8.22151 13.853 5.45309 14.433 2.64883 15.0805C0.0879081 15.6722 -0.00792858 16.9439 0.000405028 19.1673L0.00373847 20.0007H19.9961L19.9994 19.1931C20.0094 16.9531 19.9227 15.6747 17.3527 15.0805V15.0805Z"
+                  fill="#2F3035" />
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Избранное
+            <span>
+              <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M10 6.85744C10.195 5.9241 11.2892 1.6666 14.485 1.6666C16.335 1.6666 18.3333 2.9591 18.3333 5.83577C18.3333 9.0916 15.3108 12.8941 10 16.3599C4.68917 12.8941 1.66667 9.0916 1.66667 5.83577C1.66667 2.93244 3.64083 1.66494 5.48083 1.66494C8.75 1.66494 9.76833 5.9366 10 6.85744ZM0 5.83577C0 9.22577 2.55 13.7366 10 18.3333C17.45 13.7366 20 9.22577 20 5.83577C20 -0.799231 11.96 -1.68756 10 2.7216C8.05167 -1.6634 0 -0.836731 0 5.83577Z"
+                  fill="#2F3035" />
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Корзина
+            <span>
+              <svg width="30" height="23" viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M30 0L29.0713 2.5H26.66L22.3175 17.5H5.76875L0 3.75H21.015L20.31 6.25H3.76L7.43125 15H20.4662L24.7563 0H30ZM10.625 18.75C9.59 18.75 8.75 19.59 8.75 20.625C8.75 21.6612 9.59 22.5 10.625 22.5C11.66 22.5 12.5 21.6612 12.5 20.625C12.5 19.59 11.66 18.75 10.625 18.75ZM19.25 10L16.875 18.75C15.84 18.75 15 19.5888 15 20.625C15 21.6612 15.84 22.5 16.875 22.5C17.91 22.5 18.75 21.6612 18.75 20.625C18.75 19.59 17.91 18.75 16.875 18.75L19.25 10Z"
+                  fill="#2F3035" />
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Магазины
+            <span>
+              <svg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M6.83333 13.3429C6.55719 13.3429 6.33333 13.5667 6.33333 13.8429V19.7C6.33333 19.9761 6.10948 20.2 5.83333 20.2H1.5C1.22386 20.2 1 19.9761 1 19.7V8.08711C1 7.94115 1.06378 7.80247 1.1746 7.70748L8.6746 1.27891C8.86185 1.11842 9.13815 1.11842 9.3254 1.27891L16.8254 7.70748C16.9362 7.80247 17 7.94115 17 8.08711V19.7C17 19.9761 16.7761 20.2 16.5 20.2H12.1667C11.8905 20.2 11.6667 19.9761 11.6667 19.7V13.8429C11.6667 13.5667 11.4428 13.3429 11.1667 13.3429H6.83333Z"
+                  stroke="#2F3035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Акции
+            <span>
+              <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M6.14209 1.98291C6.73682 2.65967 7.03418 3.57568 7.03418 4.73096C7.03418 5.88623 6.73682 6.80566 6.14209 7.48926C5.54736 8.17285 4.75098 8.51465 3.75293 8.51465C2.75488 8.51465 1.9585 8.17285 1.36377 7.48926C0.775879 6.80566 0.481934 5.88623 0.481934 4.73096C0.481934 3.57568 0.775879 2.65967 1.36377 1.98291C1.9585 1.29932 2.75488 0.95752 3.75293 0.95752C4.75098 0.95752 5.54736 1.29932 6.14209 1.98291ZM3.75293 6.90479C4.13574 6.90479 4.43311 6.71338 4.64502 6.33057C4.86377 5.94092 4.97314 5.40771 4.97314 4.73096C4.97314 4.04736 4.86377 3.51416 4.64502 3.13135C4.43311 2.7417 4.13574 2.54688 3.75293 2.54688C3.37695 2.54688 3.07959 2.7417 2.86084 3.13135C2.64893 3.51416 2.54297 4.04736 2.54297 4.73096C2.54297 5.40771 2.64893 5.94092 2.86084 6.33057C3.07959 6.71338 3.37695 6.90479 3.75293 6.90479ZM3.95801 16H1.72266L7.45459 8.15576L12.5405 1.20361H14.7554L9.17725 8.84277L3.95801 16ZM15.1143 9.65283C15.709 10.3364 16.0063 11.2559 16.0063 12.4111C16.0063 13.5664 15.709 14.4858 15.1143 15.1694C14.5195 15.8462 13.7231 16.1846 12.7251 16.1846C11.7271 16.1846 10.9307 15.8462 10.3359 15.1694C9.74805 14.4858 9.4541 13.5664 9.4541 12.4111C9.4541 11.2559 9.74805 10.3364 10.3359 9.65283C10.9307 8.96924 11.7271 8.62744 12.7251 8.62744C13.7231 8.62744 14.5195 8.96924 15.1143 9.65283ZM11.833 14.0005C12.0518 14.3901 12.3491 14.585 12.7251 14.585C13.1011 14.585 13.3984 14.3901 13.6172 14.0005C13.8359 13.6108 13.9453 13.0776 13.9453 12.4009C13.9453 11.7241 13.8359 11.1909 13.6172 10.8013C13.3984 10.4116 13.1011 10.2168 12.7251 10.2168C12.3491 10.2168 12.0518 10.4116 11.833 10.8013C11.6211 11.1909 11.5151 11.7241 11.5151 12.4009C11.5151 13.0776 11.6211 13.6108 11.833 14.0005Z"
+                  fill="#2F3035" />
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Доставка и оплата</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Квадроциклы</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Катера</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Гидроциклы</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Лодки</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Вездеходы</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Снегоходы</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Двигатели</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Запчасти</a>
+        </li>
+        <li class="burger-nav__item">
+          <a href="#" class="burger-nav__link">Москва,
+            ул. Науки 25</a>
+        </li>
+      </ul>
       <div class='header__top'>
         <div class="container">
           <div class="header__top-inner">
-            <nav>
-              <ul class="header__nav">
-                <li class='header__nav-link'>
-                  <a href="#">Магазины</a>
-                </li>
-                <li class='header__nav-link'>
-                  <a href="#">Акции</a>
-                </li>
-                <li class='header__nav-link'>
-                  <a href="#">Доставка и оплата</a>
-                </li>
-              </ul>
-            </nav>
+            <ul class="header__nav header__nav-top">
+              <li class='header__nav-link header__nav-link-top'>
+                <a href="#">Магазины</a>
+              </li>
+              <li class='header__nav-link header__nav-link-top'>
+                <a href="#">Акции</a>
+              </li>
+              <li class='header__nav-link header__nav-link-top'>
+                <a href="#">Доставка и оплата</a>
+              </li>
+            </ul>
             <a class='haeder__logo logo' href="./index.html">
-              <img src="./images/logo.svg" alt="logo">
+              <!-- <img src="./images/logo.svg" alt="logo"> -->
             </a>
             <a class='header__nav-link header__nav-link--location' href="#">Москва, ул. Науки 25</a>
-            <nav>
-              <ul class='header__nav header__nav-user'>
-                <li class='header__nav-link-user'>
-                  <a href="#">
-                    <img src="./images/heart.svg" alt="сердце">
-                  </a>
-                </li>
-                <li class='header__nav-link-user'>
-                  <a href="#">
-                    <img src="./images/person.svg" alt="иконка силуэта человека">
-                  </a>
-                </li>
-                <li class='header__nav-link-user'>
-                  <a href="#">
-                    <img src="./images/bascet.svg" alt="">
-                    <span>1</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
+            <ul class='header__nav header__nav-user header__nav-link-user--heart'>
+              <li class='header__nav-link-user'>
+                <a href="#">
+                  <img src="./images/heart.svg" alt="сердце">
+                </a>
+              </li>
+              <li class='header__nav-link-user header__nav-link-user--login'>
+                <a href="#">
+                  <img src="./images/person.svg" alt="иконка силуэта человека">
+                </a>
+              </li>
+              <li class='header__nav-link-user header__nav-link-user--bascet'>
+                <a href="#">
+                  <img src="./images/bascet.svg" alt="">
+                  <span>1</span>
+                </a>
+              </li>
+            </ul>
+
           </div>
         </div>
       </div>
       <div class="header__bottom">
         <div class="container">
-          <nav>
-            <ul class='header__nav'>
-              <li class='header__nav-link'>
-                <a href="#">Квадроциклы</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Катера</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Гидроциклы</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Лодки</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Вездеходы</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Снегоходы</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Двигатели</a>
-              </li>
-              <li class='header__nav-link'>
-                <a href="#">Запчасти</a>
-              </li>
-            </ul>
-          </nav>
+          <ul class='header__nav header__nav-bottom'>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Квадроциклы</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Катера</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Гидроциклы</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Лодки</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Вездеходы</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Снегоходы</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Двигатели</a>
+            </li>
+            <li class='header__nav-link header__nav-link-bottom'>
+              <a href="#">Запчасти</a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
@@ -550,12 +648,12 @@
       <section class='bannerDiscount'>
         <div class="container">
           <div class='bannerDiscount__inner'>
-            <div class="bannerDiscount__imgBox">
-              <div><img src="./images/bannerDiscount/1.svg" alt="квадроцикл"></div>
-              <div><img src="./images/bannerDiscount/2.svg" alt="багги"></div>
-            </div>
-            <p class='bannerDiscount__discription'>CКИДКИ <br>
-              на все запчасти <br>
+            <!-- <div class="bannerDiscount__imgBox"> -->
+            <div class="bannerDiscount__imgBoxOne"><img src="./images/bannerDiscount/1.svg" alt="квадроцикл"></div>
+            <div class="bannerDiscount__imgBoxTwo"><img src="./images/bannerDiscount/2.svg" alt="багги"></div>
+            <!-- </div> -->
+            <p class='bannerDiscount__discription'>CКИДКИ 
+              на все запчасти 
               до 70%</p>
             <button class='bannerDiscount__button'>ПОСМОТЕТЬ ВСЕ</button>
           </div>
